--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
-    "start": "node dist/server/node-build.mjs",
+    "start": "nodemon server/node-build.ts",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
+    "@react-google-maps/api": "^2.20.8",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "nodemon": "^3.1.11",
     "zod": "^3.25.76"
   },
   "devDependencies": {
